# docs/swagger.json
@@ -66,7 +66,7 @@
         },
         "/tx/": {
             "post": {
-                "description": "Post your data in a specified ANS-104 data-item format.",
+                "description": "Post your data using liteseed",
                 "consumes": [
                     "application/json"
                 ],
@@ -76,16 +76,7 @@
                 "tags": [
                     "Upload"
                 ],
-                "summary": "Post a data-item",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "ID of the data-item",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
+                "summary": "Post data",
                 "responses": {
                     "200": {
                         "description": "OK",
