# internal/server/data_post.go
@@ -2,31 +2,29 @@ package server
 
 import (
 	"errors"
-	"fmt"
 	"log"
 	"net/http"
 	"strconv"
 
 	"github.com/gin-gonic/gin"
 	"github.com/liteseed/goar/transaction/data_item"
-	"github.com/liteseed/transit/internal/bundler"
 	"github.com/liteseed/transit/internal/database/schema"
 )
 
-type DataItemPostResponse = bundler.DataItemPostResponse
 
-type DataItemPostRequestHeader struct {
+
+type DataPostRequestHeader struct {
 	ContentType   *string `header:"content-type" binding:"required"`
 	ContentLength *string `header:"content-length" binding:"required"`
 }
 
-func parseHeaders(context *gin.Context) (*DataItemPostRequestHeader, error) {
-	header := &DataItemPostRequestHeader{}
-	if err := context.ShouldBindHeader(header); err != nil {
+func parse(ctx *gin.Context) (*DataPostRequestHeader, error) {
+	header := &DataPostRequestHeader{}
+	if err := ctx.ShouldBindHeader(header); err != nil {
 		return nil, errors.New("required header(s) - content-type, content-length")
 	}
-	if *header.ContentType != CONTENT_TYPE_OCTET_STREAM {
-		return nil, errors.New("required header(s) - content-type: application/octet-stream")
+	if *header.ContentType != "" {
+		return nil, errors.New("required header(s) - content-type")
 	}
 	if *header.ContentLength == "0" {
 		return nil, errors.New("required header(s) - content-length")
@@ -34,35 +32,17 @@ func parseHeaders(context *gin.Context) (*DataItemPostRequestHeader, error) {
 	return header, nil
 }
 
-type Transaction struct {
-	ID       string `json:"id"`
-	Owner    string `json:"owner"`
-	Quantity string `json:"quantity"`
-}
-
-func parseBody(context *gin.Context, contentLength int) ([]byte, error) {
-	rawData, err := context.GetRawData()
-	if err != nil {
-		return nil, err
-	}
-	if len(rawData) != contentLength {
-		return nil, fmt.Errorf("content-length, body: length mismatch (%d, %d)", contentLength, len(rawData))
-	}
-
-	return rawData, nil
-}
-
-// Post a data-item to Liteseed godoc
-// @Summary      Post a data-item
-// @Description  Post your data in a specified ANS-104 data-item format.
+// Post a data to Liteseed godoc
+// @Summary      Post data
+// @Description  Post your data using liteseed
 // @Tags         Upload
 // @Accept       json
 // @Produce      json
 // @Success      200          {object}  DataItemPostResponse
 // @Failure      400,424,500  {object}  HTTPError
 // @Router       /tx/ [post]
-func (srv *Server) DataItemPost(ctx *gin.Context) {
-	header, err := parseHeaders(ctx)
+func (srv *Server) DataPost(ctx *gin.Context) {
+	header, err := parse(ctx)
 	if err != nil {
 		NewError(ctx, http.StatusBadRequest, err)
 		return
@@ -78,18 +58,12 @@ func (srv *Server) DataItemPost(ctx *gin.Context) {
 		NewError(ctx, http.StatusBadRequest, err)
 		return
 	}
+	dataItem := data_item.New(rawData, "", "", nil)
 
-	dataItem, err := data_item.Decode(rawData)
+	_, err = srv.wallet.SignDataItem(dataItem)
 	if err != nil {
 		log.Println(err)
-		NewError(ctx, http.StatusBadRequest, errors.New("failed to decode data item"))
-		return
-	}
-
-	err = dataItem.Verify()
-	if err != nil {
-		log.Println(err)
-		NewError(ctx, http.StatusBadRequest, errors.New("failed to verify data item"))
+		NewError(ctx, http.StatusInternalServerError, errors.New("failed to sign data item"))
 		return
 	}
 
